<resources>
    <string name="app_name">FlexiPay</string>
    <string name="fast_and_efficient">A Fast &amp; Efficient Service to Go Cashless! </string>
    <string name="welcome">Welcome to FlexiPay</string>
    <string name="without">Shop Without a Wallet…</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="input_number">Enter Mobile Number</string>
    <string name="using_mobile">Using the Mobile Number provided, we will text you a code to verify your account.</string>
    <string name="checkbox"><![CDATA[By “continuing” you are agreeing to our Terms & Conditions as well as our Privacy Policy]]></string>
    <string name="continu">continue</string>
    <string name="personal">Personal Info</string>
    <string name="please_provide">Please provide us with your <br /> personal information. Your name should just as it appears on your National ID, Passport</string>
    <string name="surname">Surname</string>
    <string name="given">Given Name</string>
    <string name="dob">What,s Your D.O.B? (DD/MM/YY)</string>
    <string name="gender">Gender</string>
    <string name="email">Enter Your Email Address</string>
    <string name="just">Just One Step</string>
    <string name="please">Provide us with the details we have<br />  requested below</string>
    <string name="alt_number">Alternative Mobile Number</string>
    <string name="referal">Referral code</string>
    <string name="occupation">Select Occuption</string>
    <string name="create">CREATE YOUR ACCOUNT</string>
    <string name="document">Document Photo</string>
    <string name="doc_photo">Provide us with Document Photo ID.</string>
    <string name="id_type">ID Type</string>
    <string name="input_id">Enter ID</string>
    <string name="card_number">Card Number</string>
    <string name="verification">Verification Code</string>
    <string name="enter_code">Enter the 4-digit code sent to you at</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="phoneno">+254 700 924528</string>
    <string name="resend_code">Resend code in 00:13</string>
    <string name="id_front">Take ID Front</string>
    <string name="id_back">Take ID Back</string>
    <string name="greeting">Good Afternoon, Wilfred N</string>
    <string name="enter_pin">Please Enter PIN to Proceed</string>
    <string name="forgot_pin">Forgot your pin? Reset</string>
    <string name="image">image</string>
</resources>