<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flexipay_dark">

    <ImageView
        android:id="@+id/im_arrow"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/back_arrow"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="24sp"
        android:text="@string/document"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/im_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/im_arrow" />

    <TextView
        android:id="@+id/usingMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="28sp"
        android:text="@string/doc_photo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_id_type"
        style="@style/textInputLayoutOutlinedBoxCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="400"
        app:boxStrokeColor="@color/orange_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usingMobile">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/id_type"
            android:inputType="phone"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_id"
        style="@style/textInputLayoutOutlinedBoxCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/white"
        android:weightSum="400"
        app:boxStrokeColor="@color/orange_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_id_type">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/input_id"
            android:inputType="textShortMessage"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_occupation"
        style="@style/textInputLayoutOutlinedBoxCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/white"
        android:weightSum="400"
        app:boxStrokeColor="@color/orange_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_id">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/card_number"
            android:inputType="date"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:text="@string/continu"
        android:textColor="@android:color/white"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="6dp" />

    <ImageView
        android:id="@+id/iv_id_front"
        android:layout_width="156dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/camera"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_occupation" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/id_front"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:lineSpacingExtra="24sp"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@+id/iv_id_front"
        app:layout_constraintEnd_toEndOf="@+id/iv_id_front"
        app:layout_constraintStart_toStartOf="@+id/iv_id_front" />

    <ImageView
        android:id="@+id/iv_id_back"
        android:contentDescription="@string/image"
        android:layout_width="156dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/camera"
        app:layout_constraintBottom_toBottomOf="@+id/iv_id_front"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/id_back"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:lineSpacingExtra="24sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@+id/iv_id_back"
        app:layout_constraintEnd_toEndOf="@+id/iv_id_back"
        app:layout_constraintStart_toStartOf="@+id/iv_id_back" />


</androidx.constraintlayout.widget.ConstraintLayout>