<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flexipay_dark">

    <ImageView
        android:id="@+id/im_arrow"
        android:layout_width="23dp"
        android:contentDescription="@string/image"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="24sp"
        android:text="@string/personal"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/im_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/im_arrow" />

    <TextView
        android:id="@+id/usingMobile"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:lineHeight="28dp"
        android:text="@string/please_provide"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_surname"
        style="@style/textInputLayoutOutlinedBoxCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="400"
        app:boxStrokeColor="@color/orange_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usingMobile">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/surname"
            android:inputType="textShortMessage"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_given_name"
        style="@style/textInputLayoutOutlinedBoxCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="400"
        app:boxStrokeColor="@color/orange_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_surname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/given"
            android:inputType="textShortMessage"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_dob"
        style="@style/textInputLayoutOutlinedBoxCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="400"
        app:boxStrokeColor="@color/orange_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_given_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/dob"
            android:inputType="date"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gender_input_layout"
        style="@style/exposedDropdownMenuCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="400"
        app:boxBackgroundColor="@color/flexipay_dark"
        app:boxStrokeColor="@color/orange_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_dob">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/gender"
            android:inputType="none"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/textInputLayoutOutlinedBoxCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="400"
        app:boxStrokeColor="@color/orange_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLength="30"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        app:backgroundTint="@null"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="6dp" />


</androidx.constraintlayout.widget.ConstraintLayout>