<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flexipay_dark"
    tools:context=".fragments.MobileNumberFragment">


    <ImageView
        android:id="@+id/arrowMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="24sp"
        android:text="@string/mobile_number"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/arrowMobile"
        app:layout_constraintStart_toEndOf="@+id/arrowMobile"
        app:layout_constraintTop_toTopOf="@+id/arrowMobile"
        tools:targetApi="p" />


    <TextView
        android:id="@+id/usingMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="20sp"
        android:text="@string/using_mobile"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/cpp"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:clipChildren="false"
        android:clipToPadding="true"
        android:gravity="center_vertical"
        app:ccp_autoDetectCountry="true"
        app:ccp_clickable="true"
        app:ccp_contentColor="@color/white"
        app:ccp_customMasterCountries="TZ,KE"
        app:ccp_showArrow="true"
        app:ccp_showNameCode="true"
        app:ccp_textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text"
        style="@style/textInputLayoutOutlinedBoxCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:boxStrokeColor="@color/orange_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cpp"
        app:layout_constraintTop_toBottomOf="@+id/usingMobile">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:hint="@string/input_number"
            android:inputType="phone"
            android:maxLength="9"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:buttonTint="@color/white"
        android:gravity="center_vertical|fill_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/chk"
        app:layout_constraintEnd_toStartOf="@+id/chk"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chk"
        app:useMaterialThemeColors="true" />

    <TextView
        android:id="@+id/chk"
        android:layout_width="343dp"
        android:layout_height="46dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:text="@string/checkbox"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        tools:targetApi="p" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:text="@string/continu"
        android:textColor="@android:color/white"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="6dp" />

</androidx.constraintlayout.widget.ConstraintLayout>


